pkg/gen/examples/invalid/lowerbound/enum.go
package noninteger

//go:enumer
type LowerBound int

const (
	LowerBoundA LowerBound = -1
	LowerBoundB LowerBound = 0
)
